# at-research

./: .gitignore  README.md  pyproject.toml
portfolio_research/portfolios/: minvariance_beta0.py  minvariance_beta1.py  targetactiverisk_unconstrained.py
research/: portfolios_analysis.py  risk_model_analysis.py  signals_analysis.py
research/portfolios/: minvariance.py  minvariance_beta1_longonly.py  minvariance_longonly.py  minvariance_unconstrained.py  targetactiverisk.py  targetactiverisk_longonly.py
research/risk_models/: ah3.py  ah4.py  ah5.py  capm.py
research/signals/: no_alphas.py
scripts/: run_signals.sh
signal_research/: analysis.py  reversal.py
signal_research/signals/: momentum.py  no_alphas.py  reversal.py
src/at_research/: data.py  data_providers.py  models.py
src/at_research/signals/: reversal.py
src/at_research/utils/: backtest.py  signals.py
utils/: backtest.py  data.py  models.py  schemas.py
utils/clients/: __init__.py  bear_lake.py
utils/providers/: __init__.py  alpha.py  benchmark.py  betas.py  calendar.py  returns.py  risk_model.py
utils/signals/: __init__.py  momentum.py  reversal.py
